@@ -1,3 +1,7 @@
+2006-09-14  Stipe Tolj  <stolj at kannel.org>
+  * test/test_store_dump.c: adding a simple test tool to msg_dump() the
+    contents of a store-file.
+
 2006-09-09  Stipe Tolj  <stolj at kannel.org>
   * gw/smsbox.c: fixing POST XML handling, where sender address was not
     parsed from the XML. Thanks to Francesco Emmi for the patch.
